--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -64,7 +64,7 @@
 
     <br><br>
 
-    <h3>Advanced</h3>
+    <h3>Misc.</h3>
     <a href="/docs/memory">Memory management</a>
     <hr>
     <a href="/docs/emission">Emission and context</a>
@@ -72,6 +72,8 @@
     <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
     <a href="/docs/under-the-hood">Under the hood</a>
+    <hr>
+    <a href="/docs/connective-v-rxjs">CONNECTIVE v RxJS</a>
 
   </div>
   <div class="search">
