--- a/docs/templates/invoke.njk
+++ b/docs/templates/invoke.njk
@@ -11,109 +11,94 @@ set of inputs.
 For example, imagine the following composition:
 
 <pre try="https://stackblitz.com/edit/connective-invk-ex1?file=stargazers.ts">
-  <code class="javascript">import { Composition, map, pipe, spread, reduce, handleError, HandleError } from '@connectv/core';
+  <code class="javascript">import { composition, map, pipe, spread, reduce, pin, handleError } from '@connectv/core';
 import { ajax } from 'rxjs/ajax';
 import { debounceTime } from 'rxjs/operators';
 
 //--&gt; this composition will calculate all of stargazers
 //--&gt; all the public repos of a user have on github.
-export class Stargazers extends Composition {
-  private handle: HandleError;
+export const stargazers = composition(() =&gt; {
+  let username = pin();
 
-  constructor(){
-    super({
-      inputs: ['username'],
-      outputs: ['stars', 'not-found']
-    });
-  }
+  let handler = handleError();
 
-  build() {
-    this.handle = this.add(handleError()) as HandleError;
-  }
+  let stars = username
+  .to(map((username, done, error) =&gt; {
+    ajax.getJSON(
+      `https://api.github.com/users/${username}/repos` //--&gt; GitHub API!
+    ).subscribe(done, error);                          //--&gt; pass on the callbacks
+  }))
+  .to(handler)                                         //--&gt; let errors be handled
+  .to(spread())                                        //--&gt; spread individual repos
+  .to(map(repo =&gt; repo.stargazers_count))              //--&gt; get the stargazers of the repo
+/*!*/  .to(reduce((total, stars) =&gt; total + stars))         //--&gt; aggregate everything
+  .to(pipe(debounceTime(1)))                           //--&gt; wait till aggregation is done
 
-  wire() {
-    this.in('username')
-    .to(map((username, done, error) =&gt; {
-      ajax.getJSON(
-        `https://api.github.com/users/${username}/repos` //--&gt; GitHub API!
-      ).subscribe(done, error);                          //--&gt; pass on the callbacks
-    }))
-    .to(this.handle.input);                              //--&gt; let errors be handled
-
-    this.handle.error.to(this.out('not-found'));         //--&gt; in case of error, assume NotFound
-
-    this.handle.output                                   //--&gt; in case of proper result ...
-    .to(spread())                                        //... spread to individual repos
-    .to(map(repo =&gt; repo.stargazers_count))              //... get the stargazers of the repo
-/*!*/    .to(reduce((total, stars) =&gt; total + stars))         //... aggregate everything
-    .to(pipe(debounceTime(1)))                           //... wait till aggregation is done
-    .to(this.out('stars'));                              //... tell the whole world about it
-  }
-}</code>
+  return [{ username }, { stars, notFound: handler.error }];
+});</code>
 </pre>
 
 Using this composition usually looks like this:
 
 <pre try="https://stackblitz.com/edit/connective-invk-ex1?file=index.ts">
-  <code class="javascript">import { wrap, map, pipe, filter } from '@connectv/core';
+  <code class="javascript">import { wrap, map, pipe, filter, sink } from '@connectv/core';
 import { fromEvent } from 'rxjs';
 import { debounceTime } from 'rxjs/operators';
 
-import { Stargazers } from './stargazers';
+import { stargazers } from './stargazers';
 
 let i = document.getElementById('i') as HTMLInputElement;
 let p = document.getElementById('p');
 
+wrap(fromEvent(i, 'input'))
+.to(map(() =&gt; i.value))
+.to(filter(v =&gt; v))
+.to(pipe(debounceTime(1000)))
 //
 // PROBLEM:: we need a fresh instance of Stargazers so that we don't
 // get the aggregate of all users we tried ...
 //
-/*!*/let s = new Stargazers();
-
-wrap(fromEvent(i, 'input'))
-  .to(map(() =&gt; i.value))
-  .to(filter(v =&gt; v))
-  .to(pipe(debounceTime(1000)))
-  .to(s.in('username'));
-
-s.out('not-found').subscribe(() =&gt; p.textContent = 'NOT FOUND');
-s.out('stars').subscribe(v =&gt; p.textContent = v);</code>
+/*!*/.to(stargazers())
+.serialTo(
+  sink(v =&gt; p.textContent = v),
+  sink(() =&gt; p.textContent = 'NOT FOUND')
+)
+.subscribe();</code>
 </pre>
 
-Now if you enter multiple usernames, you will see that the output you are getting is the aggregate of the total number of stars
-for <i>ALL</i> of the entered users.
-This is because we have one instance of <span code>Stargazers</span> in our flow, so it will aggregate
+Now if you enter multiple usernames, you will see that the output you are getting is the aggregate of the total number of stars for <i>ALL</i> of the entered users.
+This is because we have one instance of <span code>stargazers()</span> in our flow, so it will aggregate
 the stars of all incoming users.
 
 <br><br>
 
-To fix this, you can use <span code>invoke()</span> to create a new instance of <span code>Stargazers</span> per username,
+To fix this, you can use <span code>invoke()</span> to create a new instance of <span code>stargazers()</span> per username,
 hence only getting the aggregate number of stars for that user:
 
 <pre try="https://stackblitz.com/edit/connective-invk-ex2?file=index.ts">
-  <code class="javascript">/*!*/import { wrap, map, pipe, filter, invoke } from '@connectv/core';
+  <code class="javascript">/*!*/import { wrap, map, pipe, filter, invoke, sink } from '@connectv/core';
 import { fromEvent } from 'rxjs';
 import { debounceTime } from 'rxjs/operators';
 
-import { Stargazers } from './stargazers';
+import { stargazers } from './stargazers';
 
 let i = document.getElementById('i') as HTMLInputElement;
 let p = document.getElementById('p');
 
+wrap(fromEvent(i, 'input'))
+.to(map(() =&gt; i.value))
+.to(filter(v =&gt; v))
+.to(pipe(debounceTime(1000)))
 //
 // PROBLEM FIXED: invoke() will create a new instance of
 // Stargazers() for each username.
 //
-/*!*/let s = invoke(() =&gt; new Stargazers());
-
-wrap(fromEvent(i, 'input'))
-  .to(map(() =&gt; i.value))
-  .to(filter(v =&gt; v))
-  .to(pipe(debounceTime(1000)))
-  .to(s.in('username'));
-
-s.out('not-found').subscribe(() =&gt; p.textContent = 'NOT FOUND');
-s.out('stars').subscribe(v =&gt; p.textContent = v);</code>
+/*!*/.to(invoke(stargazers))
+.serialTo(
+  sink(v =&gt; p.textContent = v),
+  sink(() =&gt; p.textContent = 'NOT FOUND')
+)
+.subscribe();</code>
 </pre>
 
 <h2 id="behavior">Behavior</h2>
