--- a/docs/templates/_base.njk
+++ b/docs/templates/_base.njk
@@ -32,7 +32,7 @@
   <body>
     <div id="header">
       {% block header %}
-      <a class="github-button" href="https://github.com/connect-platform/connective" data-icon="octicon-star" data-show-count="true" aria-label="Star connect-platform/connective on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/connect-platform/connective"data-show-count="true" aria-label="Star connect-platform/connective on GitHub">Star on GitHub</a>
       {% endblock %}
     </div>
     <div class="container">
