--- a/docs/templates/chunks/_footer.njk
+++ b/docs/templates/chunks/_footer.njk
@@ -1,7 +1,7 @@
 <div class="footer">
   <a href="/docs/overview">Docs</a>
   <hr>
-  <a href="https://github.com/CONNECT-platform/connective" target="_blank">GitHub</a>
+  <a href="javascript:void()" class="gitter">Community</a>
 
   <div id="dmtoggle">
     <div class="arc"></div>
@@ -21,4 +21,16 @@
     <div class="line"></div>
     <div class="line"></div>
   </a>
+</div>
+
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'connectv/community',
+    activationElement: '.footer a.gitter',
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
+
+<div id="gitter-overlay" class="overlay fade">
 </div>
