--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -898,6 +898,7 @@ code .line {
   transition: background .15s;
   position: relative;
   padding: 1px 0;
+  border-radius: 3px;
 }
 
 code .line:before {
