--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -44,7 +44,11 @@
     <hr>
     <a href="/docs/state">state</a>
     <hr>
+    <a href="/docs/sampler">sampler</a>
+    <hr>
     <a href="/docs/gate">gate</a>
+    <hr>
+    <a href="/docs/check">check</a>
     <hr>
     <a href="/docs/handle-error">handleError</a>
     <hr>
