--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -855,6 +855,66 @@ body.dark-mode .nav .line {
   opacity: 1; z-index: 1000; transition: opacity .15s;
 }
 
+/*********** code previews ***********/
+
+.pre-holder {
+  display: flex;
+  flex-direction: row;
+}
+
+.pre-holder .code-holder {
+  width: 65%;
+}
+
+.pre-holder .preview-holder {
+  flex-grow: 1;
+  padding: 12px;
+  padding-right: 2px;
+  padding-bottom: 29px;
+}
+
+iframe.preview {
+  display: block;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .12);
+  border-radius: 3px;
+  overflow: hidden;
+  background: #ffffff;
+}
+
+.pre-holder + .buttons {
+  margin-top: -16px;
+}
+
+@media screen and (max-width: 768px) {
+  .pre-holder {
+    flex-direction: column;
+  }
+
+  .pre-holder .code-holder {
+    width: 100%;
+  }
+
+  .pre-holder .preview-holder {
+    width: 100%;
+    min-height: 256px;
+    padding: 0;
+    margin-top: -12px;
+  }
+
+  iframe.preview {
+    min-height: 256px;
+  }
+
+  .pre-holder + .buttons {
+    margin-top: 12px;
+    margin-bottom: 24px;
+  }
+}
+
 /*********** hljs overrides ***********/
 
 span[code] {
@@ -899,6 +959,7 @@ code .line {
   position: relative;
   padding: 1px 0;
   border-radius: 3px;
+  min-width: 736px;
 }
 
 code .line:before {
