--- a/docs/templates/chunks/_nav.njk
+++ b/docs/templates/chunks/_nav.njk
@@ -44,6 +44,8 @@
     <hr>
     <a href="/docs/state">state</a>
     <hr>
+    <a href="/docs/deep">deep states</a>
+    <hr>
     <a href="/docs/sampler">sampler</a>
     <hr>
     <a href="/docs/gate">gate</a>
